--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aos": "^2.3.4",
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "i18next": "^23.5.1",
@@ -13,11 +14,11 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.11.0",
+    "react-refresh": "^0.14.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.0"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react-refresh": "^0.4.3",
     "tailwindcss": "^3.3.3"
   }
 }
